// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webform Component does not render when referenced_webform is empty 1`] = `
<div>
  



</div>
`;

exports[`Webform Component renders with all attributes provided 1`] = `
<div>
  


  
  <div
    class="ct-webform ct-theme-dark ct-vertical-spacing-inset--both ct-webform--with-background additional-class"
    data-test="true"
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <form>
            Webform content
          </form>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Webform Component renders with only required attributes 1`] = `
<div>
  


  
  <div
    class="ct-webform ct-theme-light   "
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <form>
            Webform content
          </form>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Webform Component renders without additional attributes and classes 1`] = `
<div>
  


  
  <div
    class="ct-webform ct-theme-light   "
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <form>
            Webform content
          </form>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;
